add header section

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,4 +3,37 @@
 *{
     font-family: 'Inter', sans-serif;
 font-family: 'Merriweather', serif;
-}   
+}
+
+/* Header Section */
+
+.header-section{
+    background-image: url('../resources/Banner-Image.png');
+    background-repeat: no-repeat;
+    /* width: 82%; */
+    
+    border-radius: 16px;
+    background-position: center;
+    padding: 177px 344px;
+    margin: 50px auto;
+}
+
+.header-container{
+    text-align: center;
+}
+
+.header-tag{
+    color: #FFF;
+text-align: center;
+font-family: Merriweather;
+font-size: 32px;
+font-weight: 400;
+}
+
+.header-title{
+    color: #FFF;
+text-align: center;
+font-family: Merriweather;
+font-size: 72px;
+font-weight: 900;
+}
