--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,7 @@
 }
 
 .offer-img{
-    
+    margin-bottom: 120px;
 }
 
 /* Body section 2 start */
@@ -131,8 +131,43 @@
 .location-section{
     background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     justify-content: center;
+    align-items: center;
+    margin: 120px auto;
+    padding: 100px 380px;
+    width: 540px;
+    border-radius: 15px;
+    text-align: center;
+    margin-bottom: 120px;
 
 
+}
+
+.location{
+    color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    text-transform: capitalize;
+}
+
+.location-section > button{
+    border-radius: 8px;
+    background: #F00;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    padding: 16px 32px;
+}
+
+.location-title{
+    color: #F00;
 }
 
 
