--- a/styles/style.css
+++ b/styles/style.css
@@ -171,4 +171,66 @@
 }
 
 
+/* main section 4 */
+
+.best-offer-container{
+    display: flex;
+    /* width: 550px; */
+    align-items: center;
+    justify-content: center;
+    /* margin: 120px 140px; */
+    width: 70%;
+    margin: auto;
+    justify-content: space-between;
+}
+
+.best-offer{
+    max-width: 400px;
+}
+
+.best-title{
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.best-announce{
+    margin-top: 0;
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+    margin-bottom: 22px;
+}
+
+/* Common shared style */
+
+.common-description{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.best-img{
+    border: 15px #F00 solid;
+    border-radius: 100%;
+    padding: 20px;
+    gap: 118px;
+}
+
+.year-title{
+    color: #F00;
+font-family: Inter;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+margin-bottom: 16px;
+}
+
+
 
