--- a/styles/style.css
+++ b/styles/style.css
@@ -320,19 +320,27 @@
     padding: 80px;
 }
 
-newsletter-form{
-    margin: 0;
-    border: none;
-    outline: none;
-}
 .newsletter-email{
-   padding: 10px;
+   padding: 14px;
    border-radius: 15px 0 0 15px;
    outline: none;
     
 }
 .button{
     margin-left: -5px;
-    padding: 10px;
+    padding: 15px;
     border-radius: 0 15px 15px 0;
+}
+.newsletter input{
+    border: 0;
+    background-color: white;
+}
+.newsletter button{
+    border: 0;
+    background-color: red;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 10px;
+    font-weight: 600;
 }
