--- a/styles/style.css
+++ b/styles/style.css
@@ -301,6 +301,11 @@
 
 /* section 6 */
 
+.portfolio-container:hover{
+    transform: matrix(2);
+    transform: rotateX('angle');
+}
+
 .main-portfolio{
     width: 72%;
     margin: 100px auto;
